# potbot_lab

./: CMakeLists.txt  README.md  package.xml
config/: beego2_robot_localization.yaml  costmap_common_params_megarover.yaml  global_costmap_params_megarover.yaml  megarover21_robot_localization.yaml  megarover3_act_robot_localization.yaml  waffle_pi_robot_localization.yaml
launch/: beego.launch.backup  beego2_amcl.launch  beego2_bringup.launch  beego_navigation.launch  boot.launch  megarover21_act_sensor.launch  megarover21_bringup.launch  megarover21_navigation.launch  megarover3_act_sensor.launch  megarover3_bag.launch  megarover3_bringup.launch  megarover3_navigation.launch  megarover3_vmcl.launch  megarover_act_gmapping.launch  megarover_act_sensor.launch  megarover_amcl.launch  megarover_amcl2.launch  megarover_gmapping.launch  megarover_move_base.launch  megarover_move_base_dwa.launch  moving_obstacle.launch  navigation_amcl.launch  navigation_move_base.launch  navigation_slam.launch  potbot_beego.launch  potbot_beego_act.launch  potbot_debug.launch  potbot_debug_remote.launch  potbot_megarover.launch  potbot_megarover21.launch  potbot_megarover21_act.launch  potbot_megarover3.launch  potbot_megarover3_act.launch  potbot_megarover3_act_.launch  potbot_megarover_act.launch  potbot_remote.launch  robot_0.launch  robot_1.launch  robot_localization.launch  rviz.launch  (+8 more)
maps/: TDU_011310.pgm  TDU_011310.yaml  TDU_011310_0.pgm  TDU_011310_0.yaml  TDU_0113_0.pgm  TDU_0113_0.yaml  TDU_0113_0_original.pgm  TDU_0113_1.pgm  TDU_0113_1.yaml  TDU_0113_2.pgm  TDU_0113_2.yaml  (+27 more)
(+127 files in other folders)
